# libparseline

./: CMakeLists.txt  README.md
include/: parseline.h
src/: parseline.c
test/: CMakeLists.txt  parse.c
